@@ -310,6 +310,7 @@ SHOWDAMAGE=NO
 # COMBAT-ADJ         Include an adjective relative to a mob of the same level.
 # COMBAT-NOUN        Include a level-based combat/attack noun.
 # *
+# Include SKILL-PROFICIENCY to show words instead of skill proficiency numbers
 # Set the value to NONE to include none of the options above.
 # Set the value to BLANK to default to ARMOR-ABSOLUTE, ARMOR-NUMBER, 
 #    COMBAT-ABSOLUTE, COMBAT-NUMBER
@@ -1139,6 +1140,8 @@ EXPCONTACTLINE=Your account is expired.  Please contact _____ for assistance.
 
 # LISTFILE is the name of the file containing numerous charts and string
 # lists which the truly geeky among you may want to open up and customize.
+# Multiple entries may be separated by commas to allow later files to 
+# override earlier ones.
 # Default is /resources/lists.ini
 LISTFILE=/resources/lists.ini
 
