@@ -617,6 +617,112 @@ TOD_CHANGE_INSIDE= \
         , \
         ^JIt is nighttime.^?
         
+# The descriptive list for edged weapon condition, like axe, sword, etc.
+# @x1 is the weapon name
+# @x2 is the weapon condition as a percent 0-100
+# The ranges are 95-100, 85-95, 75-85, 51-75, 26-50, 10-25, 5-9, 1-4
+WEAPON_CONDITION_EDGED= \
+    ,\
+    @x1 looks slightly used (@x2%),\
+    @x1 is somewhat dull (@x2%),\
+    @x1 is dull (@x2%),\
+    @x1 has some notches and chinks (@x2%),\
+    @x1 is heavily damaged (@x2%),\
+    @x1 is so damaged that it is practically harmless (@x2%),\
+    @x1 is nearly destroyed and completely harmless (@x2%)
+
+# The descriptive list for non-edged weapon condition, like blunt, etc.
+# @x1 is the weapon name
+# @x2 is the weapon condition as a percent 0-100
+# The ranges are 95-100, 85-95, 75-85, 51-75, 26-50, 10-25, 5-9, 1-4
+WEAPON_CONDITION_OTHER= \
+    ,\
+    @x1 looks slightly used (@x2%),\
+    @x1 is somewhat worn (@x2%),\
+    @x1 is worn (@x2%),\
+    @x1 is damaged (@x2%),\
+    @x1 is heavily damaged (@x2%),\
+    @x1 is so damaged that it is practically harmless (@x2%),\
+    @x1 is nearly destroyed and completely harmless (@x2%)
+
+# The descriptive list for cloth and paper armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_CLOTH=\
+    ,\
+    @x1 is slightly worn (@x2%),\
+    @x1 has tears and rips (@x2%),\
+    @x1 has numerous tears and rips (@x2%),\
+    @x1 is shredded and ripped (@x2%),\
+    @x1 is a shredded mess (@x2%),\
+    @x1 is just a few threads (@x2%)
+
+# The descriptive list for glass, stone, and synthetic armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_GLASS=\
+    ,\
+    @x1 is slightly scuffed (@x2%),\
+    @x1 has a few hairline cracks (@x2%),\
+    @x1 has some cracks (@x2%),\
+    @x1 has numerous streaking cracks (@x2%),\
+    @x1 is practically shards (@x2%),\
+    @x1 is almost destroyed (@x2%)
+
+# The descriptive list for leather and flesh armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_LEATHER=\
+    ,\
+    @x1 is a bit scuffed (@x2%),\
+    @x1 is torn (@x2%),\
+    @x1 is badly torn up (@x2%),\
+    @x1 is badly shredded and ripped (@x2%),\
+    @x1 is a shredded mess (@x2%),\
+    @x1 is almost destroyed (@x2%)
+
+# The descriptive list for metal and mithril armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_METAL=\
+    ,\
+    @x1 has some small dents (@x2%),\
+    @x1 is dented (@x2%),\
+    @x1 is dented and cracked (@x2%),\
+    @x1 is badly dented and cracked (@x2%),\
+    @x1 is a crumpled mess (@x2%),\
+    @x1 is almost destroyed (@x2%)
+
+# The descriptive list for wooden armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_WOODEN=\
+    ,\
+    @x1 is slightly scuffed (@x2%),\
+    @x1 has some splintering (@x2%),\
+    @x1 is scuffed and splintered (@x2%),\
+    @x1 is badly cracked and splintered (@x2%),\
+    @x1 is a shredded splintered mess (@x2%),\
+    @x1 is almost destroyed (@x2%)
+
+# The descriptive list for unknown-type armor condition
+# @x1 is the armor name
+# @x2 is the armor condition as a percent 0-100
+# The ranges are 95-100, 75-95, 50-74, 25-49, 10-25, 5-9, 1-4
+ARMOR_CONDITION_OTHER=\
+    @x1 looks perfect (@x2%),\
+    @x1 is slightly scuffed (@x2%),\
+    @x1 is slightly damaged (@x2%),\
+    @x1 is damaged (@x2%),\
+    @x1 is pretty badly damaged (@x2%),\
+    @x1 is horribly damaged (@x2%),\
+    @x1 is almost destroyed (@x2%)
+
 # What users see when a weather condition ends  
 # Entries are in this order: CLEAR, CLOUDY, WINDY, RAIN,
 # THUNDERSTORM, SNOW, HAIL, HEAT_WAVE, SLEET, BLIZZARD,
@@ -635,7 +741,27 @@ WEATHER_ENDS= \
         ^JThe dust storm ends.^? , \
         ^JThe drought is finally over.^? , \
         ^JThe cold snap is over.^?
-        
+
+# When using the optional skill proficiency word display
+# instead of the normal percentage numbers, then these
+# are those words.  The range is: <5,10,20,30,40,50,60,70,75,80,85,90,85,100
+# 
+SKILL_PROFICIENCY_DESC=\
+    Beginner,\
+    Novice,\
+    Adv. Novice,\
+    Journeyman,\
+    Adv. Journeyman,\
+    Intermediate,\
+    Skilled,\
+    Very Skilled,\
+    Talented,\
+    Very Talented,\
+    Advanced,\
+    Very Advanced,\
+    Near Mastery,\
+    Mastery
+
 # What users see when the weather condition hail begins
 # First 5 entries are prefixes based on climate: 
 #    NORMAL, WET, COLD (WINTER), HOT (SUMMER), DRY
