@@ -32,6 +32,8 @@
   30. New item type: GenBagOfEndlessness -- remember to set the capacity to 0
   31. Experience can now be gained from role playing, see RPAWARD in the INI file
   32. Experience can now be deferred for a later command, see EXPDEFER in the INI file
+  33. LISTFILE now has "condition" msgs for armor and weapons, and entries are overridable.
+  34. PROWESSOPTIOS and the LISTFILE can now be used to show skill proficiency as words.
 # Build 5.9.6 Release 12/31/2017
    *. Sections in the default coffeemud.ini file were moved around.  Don't be alarmed. :)
    1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
